Update measurements